# AetherOS_Nexus_v.0.4.0

./: README.md  package-lock.json  package.json
Aether_OS_Nexus_Core_v.0.3/: AetherOS CI Pipeline.yml  (+10 more)
Aether_OS_Nexus_Core_v.0.3/AetherOS/: Cargo.toml  Makefile  PR_FINAL_INTEGRATION.md  README.md  rust-toolchain.toml  x86_64-unknown-none.json
Aether_OS_Nexus_Core_v.0.3/AetherOS/.cargo/: aetheros-x86_64.json  config.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/ADI/: Cargo.toml  interface.rs  mod.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/ADI/analyzer/: mod.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/ADI/sandbox/: Cargo.toml  governor.rs  mod.rs  model.rs  runtime.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/ADI/sandbox/src/: governor.rs  lib.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/ADI/sandbox/src/tests/: runtime_integration_test.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/ADI/translator/: mod.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/Nexus/UI/vnode/display-compositor/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/Nexus/UI/vnode/display-compositor/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/Nexus/UI/vnode/webview/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/Nexus/UI/vnode/webview/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/common/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/common/src/: channel.rs  lib.rs  nexus_net_transport.rs  syscall.rs  syscalls.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/common/src/arp_dht/: mod.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/common/src/ipc/: ai_governor_ipc.rs  dev_interface_ipc.rs  dns_ipc.rs  echo_ipc.rs  file_manager_ipc.rs  init_ipc.rs  keyboard_ipc.rs  logger_ipc.rs  mail_ipc.rs  mod.rs  model_runtime_ipc.rs  net_ipc.rs  shell_ipc.rs  socket_ipc.rs  test_ipc.rs  types.rs  ui_protocol.rs  vfs_ipc.rs  vnode.rs  webview.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/common/src/swarm_engine/: mod.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/common/src/ui/: css_engine.rs  html_parser.rs  layout.rs  mod.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/docs/system/: dev-interface-kernel-bridge.md  host-environment-audit-gaps.md  toolchain-synchronization-code-of-conduct.md  v0.4-integration-plan.md  v0.4_interactive_jump_plan.md
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/: Cargo.toml  build.rs  error.rs  linker.ld
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/.cargo/: aetheros-x86_64.json  config.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/src/: aetherfs.rs  caps.rs  dev_interface.rs  device.rs  elf.rs  gdt.rs  heap.rs  idt.rs  irq.rs  lib.rs  main.rs  network.rs  runtime.rs  snapshot_engine.rs  syscall.rs  timer.rs  usercopy.rs  vnode_loader.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/src/arch/x86_64/: boot.rs  dma.rs  gdt.rs  idt.rs  irq.rs  mod.rs  paging.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/src/arch/x86_64/boot/: long_mode.s
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/src/drivers/: framebuffer.rs  mod.rs  net.rs  serial.rs  timer.rs  vga_text.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/src/interrupts/: keyboard.rs  mod.rs  pic.rs  timer.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/src/ipc/: mailbox.rs  mod.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/src/memory/: frame_allocator.rs  mod.rs  page_allocator.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/kernel/src/task/: context_switch.rs  mod.rs  scheduler.rs  tcb.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/libnexus-net/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/libnexus-net/src/: lib.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/scripts/: audit_host_environment.sh  build.sh  build_all.sh  build_initrd.sh  build_kernel.sh  build_kernel_image.sh  debug.sh  run.sh  run_qemu.sh  setup.sh  test_qemu.sh
Aether_OS_Nexus_Core_v.0.3/AetherOS/src/ipc/: init_ipc.rs  vnode.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/src/swarm_engine/: nexus_net_transport.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/aether-healthd/: vnode.yml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/aether-logd/: vnode.yml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/aether-metricsd/: vnode.yml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/aether-recoverd/: vnode.yml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/aether-telemetryd/: vnode.yml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/dns-resolver/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/dns-resolver/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/echo/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/file-manager/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/file-manager/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/init-service/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/init-service/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/keyboard/: Cargo.toml  vnode.yml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/keyboard/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/logger/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/logger/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/mail-service/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/mail-service/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/model-runtime/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/model-runtime/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/net-bridge/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/net-bridge/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/net-stack/: Cargo.toml  main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/net-stack/src/: aethernet_device.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/registry/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/registry/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/shell/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/shell/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/socket-api/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/test/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/test/src/: main.rs
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/vfs/: Cargo.toml
Aether_OS_Nexus_Core_v.0.3/AetherOS/vnode/vfs/src/: main.rs
(+91 files in other folders)
