[workspace]
resolver = "2"
members = [
    "kernel",
    "common",
    "vnode/registry",
    "vnode/init-service",
    "Nexus/UI/vnode/display-compositor",
    "Nexus/UI/vnode/webview"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.227", default-features = false, features = ["alloc", "derive"] }
bootloader_api = { version = "=0.11.15", default-features = false }
postcard = { version = "=1.1.3", default-features = false, features = ["alloc"] }
linked_list_allocator = { version = "=0.10.5", default-features = false, features = ["use_spin"] }
x86_64 = { version = "=0.14.13", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
spin = { version = "=0.9.8", default-features = false, features = ["mutex", "spin_mutex", "rwlock", "once", "lazy", "barrier"] }
conquer-once = { version = "=0.4.0", default-features = false }
sha2 = { version = "=0.10.9", default-features = false }
smoltcp = { version = "=0.8.2", default-features = false, features = ["alloc", "proto-ipv4"] }

[workspace.metadata]
forbid-std = true
feature-gates = { default = ["alloc"], alloc = [], serde = [] }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
