[package]
name = "aetheros_common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }

# libnexus-net is now a direct dependency as NexusNetTransport uses it
libnexus-net = { path = "../libnexus-net", default-features = false }

# Dummy crate for `smoltcp` for network stack integration.
# This would typically be a dependency of the network stack V-Node.
smoltcp = { workspace = true, optional = true }

# Placeholder examples dependency
examples = { path = "./examples", optional = true }

[features]
default = ["alloc"]
alloc = []
std = ["serde?/std", "libnexus-net/std"]
serde = ["dep:serde", "dep:postcard"]
# Feature to enable `smoltcp` related items if needed directly in common
smoltcp_enabled = ["dep:smoltcp"]
# Feature to enable `examples` for building test V-Nodes
examples_enabled = ["dep:examples"]
