[package]
name = "aetheros-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
aetheros_common = { path = "../common", default-features = false, features = ["alloc"] }
bootloader_api = { workspace = true }
x86_64 = { workspace = true }
spin = { workspace = true }
conquer-once = { workspace = true }
linked_list_allocator = { workspace = true }
postcard = { workspace = true }
sha2 = { workspace = true }


[features]
default = ["alloc"]
alloc = []
bare_metal = []
