[package]
name = "aetheros-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aetheros-kernel"
path = "src/main.rs"

[dependencies]
aetheros_common = { path = "../common", default-features = false, features = ["alloc", "serde"] }
bootloader_api = { workspace = true }
x86_64 = { workspace = true }
spin = { workspace = true }
conquer-once = { workspace = true }
linked_list_allocator = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
sha2 = { workspace = true }


[features]
default = ["alloc"]
alloc = []
bare_metal = []
