[package]
name = "aetheros-kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "aetheros-kernel"
path = "src/main.rs"

[dependencies]
aetheros_common = { path = "../common", default-features = false, features = [ "alloc", "serde" ] } # Re-enabled 'alloc' feature
bootloader = { workspace = true }
bootloader_api = { workspace = true }
x86_64 = { workspace = true }
spin = { workspace = true }
conquer-once = { workspace = true }
linked_list_allocator = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, default-features = false, features = [ "derive" ] }
sha2 = { workspace = true }
adi = { path = "../ADI" }


[features]
default = []
bare_metal = []
uefi = []
bios = []

[package.metadata.bootloader]
target = "aetheros-x86_64"
