[package]
name = "aetheros-echo"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "aetheros-common", path = "../../common" }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
serde = { version = "1.0.198", default-features = false, features = ["derive", "alloc"] }

linked_list_allocator = "0.10.5"
