[package]
name = "aetheros-echo"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "aetheros_common", path = "../../common", default-features = false, features = ["serde"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
linked_list_allocator = { version = "0.10.5", default-features = false }
