[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = { version = "0.10.5", default-features = false }
common = { package = "aetheros_common", path = "../../common", default-features = false, features = ["serde"] }


[[bin]]
name = "keyboard"
path = "src/main.rs"
