[package]
name = "model-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = { version = "0.10.5", default-features = false }
common = { package = "aetheros_common", path = "../../common", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }


# The binary target for the V-Node itself
[[bin]]
name = "model-runtime"
path = "src/main.rs"
