[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = { workspace = true }
aetheros_common = { path = "../../common", default-features = false, features = ["alloc"] }
serde = { workspace = true, optional = true }
postcard = { workspace = true }

[features]
default = ["alloc"]
alloc = []
serde = ["dep:serde"]

[[bin]]
name = "registry"
path = "src/main.rs"
