[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["use_spin"] }
common = { package = "aetheros_common", path = "../../common", default-features = false, features = ["serde", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
# 'alooc' was a typo, should be 'alloc' or removed if not needed directly
# For this task, assuming 'alloc' feature in serde/postcard is sufficient


# The binary target for the V-Node itself
[[bin]]
name = "vfs"
path = "src/main.rs"
