[package]
name = "display-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
aetheros_common = { path = "../../../../common" }
serde = { workspace = true, optional = true }
postcard = { workspace = true }
linked_list_allocator = { workspace = true }

[features]
default = ["alloc"]
alloc = []
serde = ["dep:serde"]

# The binary target for the V-Node itself
[[bin]]
name = "display-compositor"
path = "src/main.rs"
